# QR-Detection-for-UAV-s

./: QR_Algo_updated.py  Qr_Mission.py  README.md  pyproject.toml  requirements.txt
src/: __init__.py  qr_algo.py  qr_mission.py
